update styling for tire size input to ensure value is readable

--- a/frontend/src/features/permits/pages/Application/components/form/axleSpacingAndWeightsSection/components/AxleSpacingAndWeightsTable.scss
+++ b/frontend/src/features/permits/pages/Application/components/form/axleSpacingAndWeightsSection/components/AxleSpacingAndWeightsTable.scss
@@ -33,7 +33,7 @@
         }
       }
 
-      &--select {
+      &--tire-size {
         min-width: 144px;
         div.autocomplete__textfield {
           .MuiInputBase-root {
@@ -45,6 +45,7 @@
 
     &__input-container {
       margin: 0;
+
     }
 
     &__cell {
